full mobile and english, some bugs fixed

--- a/gori/templates/architect_detail.html
+++ b/gori/templates/architect_detail.html
@@ -6,18 +6,33 @@
 <div class="post_detail_desktop">
 <div class="post_first_block">
 
-<a class="post_go_back" href="{% url 'architect' lang=lang %}">უკან დაბრუნება</a>
+<a class="post_go_back" href="{% url 'architect' lang=lang %}">{% t 'back' %}</a>
 <span class="post_title">{{history}}</span>
-<div class="post_social_divs"></div>
-<div class="post_social_divs"></div>
-<div class="post_social_divs"></div>
+<div class="post_social_divs"><img src="{% static '/icons/Iconlink.png' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
+<div class="post_social_divs"><img src="{% static '/icons/Vectorfb.png' %}" style="width: 22px; height: 22px; margin-left: 13.5px; margin-top: 13px; float: left;"></div>
+<div class="post_social_divs"><img src="{% static '/icons/vectortwshare.png' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
 <div class="post_line"></div>
 <span class="post_text">{{history.post_text}}</span>
 
 	<div class="post_tell_us_more">
-		<span class="post_tell_use_more_header">{% t "tell_us_more" %}</span><br><br><br><br>
-		<span class="post_tell_us_more_text">თუ თქვენ გაქვთ ინფრომაცია რომელსაც აქვს ისტორიული ღირებულება, გთხოვთ დაგვიკავშირდეთ და მოგვიყვეთ,</span><br>
-		<div class="post_tell_us_more_button"><span style="display: inline-block; margin-top:16px">მოგვწერეთ</span></div>
+		{% if lang == 'ka' %}
+		<span class="post_tell_use_more_header">{% t "tell_us_more" %}</span>
+		{% else %}
+		<span class="post_tell_use_more_headeren">{% t "tell_us_more" %}</span>
+		{% endif %}<br><br><br><br>
+		<span class="post_tell_us_more_text">{% t 'contact_us_index' %}</span><br>
+		{% if lang == 'ka' %}
+		<a href="{% url 'text_us' lang=lang %}">
+			<div class="post_tell_us_more_button">
+			<span style="display: inline-block; margin-top:16px">{% t 'textus' %}</span>
+			</div>
+		</a>
+		{% else %}		
+		<a href="{% url 'text_us' lang=lang %}">
+			<div class="post_tell_us_more_buttonen">
+			<span style="display: inline-block; margin-top:16px">{% t 'textus' %}</span>
+			</div>
+		</a>{% endif %}
 	</div>
 </div>
 <div class="post_second_block">
@@ -27,14 +42,15 @@
 	{% else %}
 	<img src="{% static history.post_img %}" class="post_img">
 	{% endif %}
-	<span class="post_author">ავტორი: {{history.post_author}}</span>
+	<span class="post_author">{% t 'author' %}: {{history.post_author}}</span>
 </div>
 </div>
 <center>
 <div class="post_detail_mobile">
 <div class="post_first_block_mobile">
-	<a class="post_go_back_mobile" href="{% url 'architect' lang=lang %}">უკან დაბრუნება</a>
+	<a class="post_go_back_mobile" href="{% url 'history' lang=lang %}">{% t 'back' %}</a>
 	<span class="post_title_mobile">{{history}}<br><br>
+	<div class="post_social_divs_mobile">
 		<img src="{% static '/icons/Iconlink.png' %}" style="width: 13.86px; height: 13.86px; margin-left: 11.07px; margin-top: 10px;"></div>
 	<div class="post_social_divs_mobile" style="margin-left: 20px">
 		<img src="{% static '/icons/Vectorfb.png' %}" style="width: 15px; height: auto; margin-left: 10.5px; margin-top: 10.5px;"></div>
@@ -62,8 +78,6 @@
 		{% else %}
 		<a href="{% url 'text_us' lang=lang %}" style="text-decoration: none;"><div class="tellusmorebuttonmobileen">{% t 'text_us_button' %}</div></a>
 		{% endif %}
-	</div>	
-
 </div>
 </center>
 
