--- a/gori/templates/humans_detail.html
+++ b/gori/templates/humans_detail.html
@@ -7,18 +7,33 @@
 <div class="humans_desktop">
 <div class="post_first_block">
 
-<a class="post_go_back" href="{% url 'humans' lang=lang %}">უკან დაბრუნება</a>
+<a class="post_go_back" href="{% url 'humans' lang=lang %}">{% t 'back' %}</a>
 <span class="post_title">{{human}}</span>
-<div class="post_social_divs"></div>
-<div class="post_social_divs"></div>
-<div class="post_social_divs"></div>
+<div class="post_social_divs"><img src="{% static '/icons/Iconlink.png' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
+<div class="post_social_divs"><img src="{% static '/icons/Vectorfb.png' %}" style="width: 22px; height: 22px; margin-left: 13.5px; margin-top: 13px; float: left;"></div>
+<div class="post_social_divs"><img src="{% static '/icons/vectortwshare.png' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
 <div class="post_line"></div>
 <span class="post_text">{{human.post_text}}</span>
 
 	<div class="post_tell_us_more">
-		<span class="post_tell_use_more_header">{% t "tell_us_more" %}</span><br><br><br><br>
-		<span class="post_tell_us_more_text">თუ თქვენ გაქვთ ინფრომაცია რომელსაც აქვს ისტორიული ღირებულება, გთხოვთ დაგვიკავშირდეთ და მოგვიყვეთ,</span><br>
-		<div class="post_tell_us_more_button"><span style="display: inline-block; margin-top:16px">მოგვწერეთ</span></div>
+		{% if lang == 'ka' %}
+		<span class="post_tell_use_more_header">{% t "tell_us_more" %}</span>
+		{% else %}
+		<span class="post_tell_use_more_headeren">{% t "tell_us_more" %}</span>
+		{% endif %}<br><br><br><br>
+		<span class="post_tell_us_more_text">{% t 'contact_us_index' %}</span><br>
+		{% if lang == 'ka' %}
+		<a href="{% url 'text_us' lang=lang %}">
+			<div class="post_tell_us_more_button">
+			<span style="display: inline-block; margin-top:16px">{% t 'textus' %}</span>
+			</div>
+		</a>
+		{% else %}		
+		<a href="{% url 'text_us' lang=lang %}">
+			<div class="post_tell_us_more_buttonen">
+			<span style="display: inline-block; margin-top:16px">{% t 'textus' %}</span>
+			</div>
+		</a>{% endif %}
 	</div>
 </div>
 <div class="post_second_block">
@@ -29,7 +44,7 @@
 <center>
 <div class="post_detail_mobile">
 <div class="post_first_block_mobile">
-	<a class="post_go_back_mobile" href="{% url 'humans' lang=lang %}">უკან დაბრუნება</a>
+	<a class="post_go_back_mobile" href="{% url 'humans' lang=lang %}">{% t 'back' %}</a>
 	<span class="post_title_mobile" style="height: auto; width:60%; float:left; margin-left:10px">{{human}}</span>
 	<img src="{% static human.post_img %}" class="post_img_mobile_human">
 	</div><br><br><br><br><br><br>
@@ -40,14 +55,14 @@
 <div class="post_social_divs" style="margin-top:0; float:left"></div>
 <div class="post_social_divs" style="margin-top:0; float:left"></div>
 <div class="post_social_divs" style="margin-top:0; float:left"></div><br><br>
-</div>
+
 </div><div class="post_line"></div>
 	{% for human in humans %}
 	<a href="{% url 'humans_detail' lang=lang id=human.id %}">
 	<div class="humans_mobile_posts">
 		<span class="humans_mobile_post_header">{{human.post_title}}</span>
 		<img src="{% static human.post_img %}" class="humans_post_img_mobile">
-		<span class="get_more_mobile_post">გაიგე მეტი</span>
+		<span class="get_more_mobile_post">{% t 'learnmore' %}</span>
 
 	</div>
 	</a>
