--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -65,7 +65,13 @@
     <div class="menu" onclick="openNav()">
           <div id="mymenu" class="menu-content"></div>
     <img class="iconmenu" src="{% static '/icons/Iconmenu.png' %}"></div>
-<div class="map"><img class="iconmap" src="{% static '/icons/Iconmap.png' %}"></div>
+<div class="map">
+  {% if lang == 'ka' %}
+    <a href="../en"><img class="iconmap" src="{% static '/icons/en.png' %}"></a>
+  {% else %}
+    <a href="../ka"><img class="iconmap" src="{% static '/icons/ka.png' %}"></a>
+  {% endif %}
+</div>
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
         <img src="{% static '/icons/Iconclosex.png' %}" class="iconmenuclose">
