--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -42,7 +42,7 @@
             ქართული
             {% else %}
             English
-            {%endif%}&nbsp&nbsp&nbsp&nbsp<img class="angle"src="{% static '/icons/Iconarrow.png' %}">
+            {%endif%}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img class="angle"src="{% static '/icons/Iconglobus.png' %}">
 <!--         <span class="textSpanForLang">
         ქართული
     </span> -->
