--- a/gori/templates/textus.html
+++ b/gori/templates/textus.html
@@ -42,12 +42,12 @@
 	<div class="contact_us_contact_child_div">
 		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 12px" src="{% static '/icons/Iconphone.png' %}"></div>
 		<span class="contact_us_contact_name">{% t 'telephone' %}</span><br>
-		<span class="contact_us_contact_info">+995 322 2 92 15 14</span>
+		<a href="tel:+995-322-2-92-15-14"><span class="contact_us_contact_info">+995 322 2 92 15 14</span></a>
 	</div>
 	<div class="contact_us_contact_child_div">
 		<div class="contact_us_contact_child_icon_div"><img src="{% static '/icons/Iconemail.png' %}" style="margin-top: 14px; margin-left: 14px"></div>
 		<span class="contact_us_contact_name">{% t 'email' %}</span><br>
-		<span class="contact_us_contact_info">info@idfi.ge</span>
+		<a href = "mailto:gorimaps@idfi.ge"><span class="contact_us_contact_info">info@idfi.ge</span></a>
 	</div>
 </div>
 <div class="contact_us_contact_ii_div">
@@ -57,14 +57,15 @@
 	<span class="contact_us_contact_usen">{% t 'find_us' %}</span><br><br>
 	{% endif %}
 		<a href="https://www.facebook.com/IDFI.official">
-			<img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
+		<img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
 		
 		<a href="https://twitter.com/IDFIGeorgia" style="margin-left:16px">
-			<img class="socialicons" src="{% static '/icons/tw.png' %}"></a>
-		<a style="margin-left:16px">
+		<img class="socialicons" src="{% static '/icons/tw.png' %}"></a>
+
+		<a style="margin-left:16px" href="https://www.youtube.com/user/IDFIGeorgia">
 		<img class="socialicons" src="{% static '/icons/yt.png' %}"></a>
 
-		<a style="margin-left:16px">
+		<a style="margin-left:16px" href="https://www.instagram.com/idfi.ge/">
 		<img class="socialicons" src="{% static '/icons/ig.png' %}"></a>
 </div>
 </div>
@@ -98,12 +99,12 @@
 	<div class="contact_us_contact_child_div" style="width:200px !important; float: left;">
 		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 1px" src="{% static '/icons/Iconphone.png' %}"></div>
 		<span class="contact_us_contact_name">{% t 'telephone' %}</span><br>
-		<span class="contact_us_contact_info">+995 322 2 92 15 14</span>
+		<a href="tel:+995-322-2-92-15-14"><span class="contact_us_contact_info">+995 322 2 92 15 14</span></a>
 	</div><br><br><br><br><br>
 		<div class="contact_us_contact_child_div" style="width:160px !important; float: left;">
 		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 14px; margin-left: 2px" src="{% static '/icons/Iconemail.png' %}"></div>
 		<span class="contact_us_contact_name"> &nbsp{% t 'email' %}</span><br>
-		<span class="contact_us_contact_info">info@idfi.ge</span>
+		<a href = "mailto:gorimaps@idfi.ge"><span class="contact_us_contact_info">info@idfi.ge</span></a>
 	</div>
 	</div><br><br><br><br>
 	<span class="contact_contactus_mobile">{% t 'contact_us' %}</span>
@@ -114,10 +115,10 @@
 		
 		<a href="https://twitter.com/IDFIGeorgia" style="float: left; margin-left: 16px;">
 			<img class="" src="{% static '/icons/tw.png' %}"></a>
-		<a style="float: left;margin-left: 16px;">
+		<a style="float: left;margin-left: 16px;" href="https://www.youtube.com/user/IDFIGeorgia">
 		<img class="" src="{% static '/icons/yt.png' %}"></a>
 
-		<a style="float: left;margin-left: 16px;">
+		<a style="float: left;margin-left: 16px;" href="https://www.instagram.com/idfi.ge/">
 		<img class="" src="{% static '/icons/ig.png' %}"></a>
 
 </div>
