--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -25,7 +25,7 @@
 		{% endif %}
 		<a href="https://www.facebook.com/IDFI.official"><img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
 		<a href="https://twitter.com/IDFIGeorgia"><img class="socialicons" src="{% static '/icons/tw.png' %}"></a>
-		<img class="socialicons" src="{% static '/icons/yt.png' %}">
+		<a href="https://www.youtube.com/user/IDFIGeorgia"><img class="socialicons" src="{% static '/icons/yt.png' %}"></a>
 		<a href="https://www.instagram.com/idfi.ge/"><img class="socialicons" src="{% static '/icons/ig.png' %}"></a>
 		{% if lang == 'ka' %}
 		<span class="contuctusfooter">{% t 'contact_us' %}</span>
@@ -53,10 +53,9 @@
 		{% else %}
 		<span class="mobilefooterfindusen">{% t 'find_us' %}</span>
 		{% endif %}
-		<a href="https://www.facebook.com/IDFI.official">
-			<img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
+		<a href="https://www.facebook.com/IDFI.official"><img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
 		<a href="https://twitter.com/IDFIGeorgia"><img class="socialicons" src="{% static '/icons/tw.png' %}"></a>
-		<img class="socialicons" src="{% static '/icons/yt.png' %}">
+		<a href="https://www.youtube.com/user/IDFIGeorgia"><img class="socialicons" src="{% static '/icons/yt.png' %}"></a>
 		<a href="https://www.instagram.com/idfi.ge/"><img class="socialicons" src="{% static '/icons/ig.png' %}"></a>
 		{% if lang == 'ka' %}
 		<span class="mobilefootercontactus">{% t 'contact_us' %}</span>
