--- a/gori/templates/humans.html
+++ b/gori/templates/humans.html
@@ -17,7 +17,7 @@
 	<div class="humans_post_desktop_iblock">
 		<span class="humans_post_desktop_header">{{human.post_title}}
 		</span>
-		<span class="humans_post_desktop_info">{{human.post_text|truncatechars:300}}</span>
+		<span class="humans_post_desktop_info">{{human.post_text|truncatechars:300}}<i style="text-decoration:underline; color:#3E3A2B;">(სრულად ნახვა)</i></span>
 	</div>
 	<img src="{% static human.post_img %}" class="humans_post_img_desktop">
 </div>
