--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,3 +1,23 @@
+.closesearchDesktop{
+position: absolute;
+right: ;
+width: 48px;
+height: 48px;
+top: 150px;
+left: 48.5%;
+
+background: #F6C042;
+border-radius: 10px;
+}
+
+.closesearchX{
+  margin-left: 16px;
+  margin-top: 16px;
+  position: absolute;
+  color: black;
+  width: 15px;
+}
+
 .navbar{
 position: block;
 width: 100%;
