last vers V3 bug fix

--- a/gori/templates/aboutproject.html
+++ b/gori/templates/aboutproject.html
@@ -29,9 +29,9 @@
 	<span class="donors_text_info">{{about_project.donors_text}}</span>
 	
 	<div class="supportsinproject">
-		<a href=""><img src="{% static '/icons/usaid.png' %}" style="width: 15%; float: left;"></a>
-		<a href=""><img src="{% static '/icons/zinc.png' %}" style="width: 17%; float: left; margin-left: 5%;"></a>
-		<a href=""><img src="{% static '/icons/idfi.png' %}" style="width: 21%; float: left; margin-left: 5%;"></a>
+		<a href="https://www.usaid.gov/"><img src="{% static '/icons/usaid.png' %}" style="width: 15%; float: left;"></a>
+		<a href="https://zincnetwork.com/"><img src="{% static '/icons/zinc.png' %}" style="width: 17%; float: left; margin-left: 5%;"></a>
+		<a href="https://idfi.ge/ge"><img src="{% static '/icons/idfi.png' %}" style="width: 21%; float: left; margin-left: 5%;"></a>
 	</div><br>
 
 
@@ -58,13 +58,13 @@
 		<span class="aboutprojectmobiledonorsinfo">{{about_project.donors_text}}</span>
 
 		<div class="aboutprojectmobiledonorsimg">
-		<a href="">
+		<a href="https://www.usaid.gov/">
 			<img src="{% static '/icons/usaid.png' %}" style="display: block; margin-right: 100%; width: 113px; margin-top: 24px;">
 		</a>
-		<a href="">
+		<a href="https://zincnetwork.com/">
 			<img src="{% static '/icons/zinc.png' %}" style="display: block; margin-right: 100%; width:141px;">
 		</a>
-		<a href="">
+		<a href="https://idfi.ge/ge">
 			<img src="{% static '/icons/idfi.png' %}" style="display: block; margin-right: 100%; width: 170px;">
 		</a>
 		</div>
