--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -118,7 +118,7 @@
 						{% if lang == 'ka' %}
 						<center><span class="allvideo">{% t "all_static" %}</span></center>
 						{% else %}
-						<span class="allvideoen">{% t "all_static" %}</span>
+						<center><span class="allvideoen">{% t "all_static" %}</span></center>
 						{% endif %}
 					</div>
 				</a>
@@ -159,7 +159,7 @@
 						{% if lang == 'ka' %}
 						<center><span class="allvideo">{% t "all_static" %}</span></center>
 						{% else %}
-						<span class="allvideoen">{% t "all_static" %}</span>
+						<center><span class="allvideoen">{% t "all_static" %}</span></center>
 						{% endif %}
 					</div>
 				</a></span></span>
