last vers V4 changes

--- a/gori/templates/humans.html
+++ b/gori/templates/humans.html
@@ -3,7 +3,12 @@
 {% block content %}
 {% load transl_extras %}
 
+<style>
+	.menuitem5{
+		text-decoration: underline !important;
+	}
 
+</style>
 <div class="humans_desktop">
 {% if lang == 'ka' %}
 <span class="humans_header_desktop">{% t 'ppeople' %}</span>
