--- a/gori/templates/textus.html
+++ b/gori/templates/textus.html
@@ -3,7 +3,12 @@
 {% block content %}
 {% load transl_extras %}
 
+<style>
+	.menuitem6{
+		text-decoration: underline !important;
+	}
 
+</style>
 <div class="text_us_desktop">
 	{% if lang == 'ka' %}
 	<span class="contact_us_header_desktop">{% t 'textus' %}</span>
