--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -58,9 +58,11 @@
     <img class="iconmenu" src="{% static '/icons/Iconmenu.png' %}"></div>
 <div class="map">
   {% if lang == 'ka' %}
-    <a href="../en"><img class="iconmap" src="{% static '/icons/en.png' %}"></a>
+  <center>
+    <a href="../en" style="color: #3E3A2B; text-decoration: none; font-family:BarlowCondensedBold; font-size: 25px; margin-top: 7px; display:inline-block;">EN</a></center>
   {% else %}
-    <a href="../ka"><img class="iconmap" src="{% static '/icons/ka.png' %}"></a>
+  <center>
+    <a href="../ka" style="color: #3E3A2B; text-decoration: none; font-family:BarlowCondensedBold; font-size: 25px; margin-top: 7px; display:inline-block;">KA</a></center>
   {% endif %}
 </div>
     <div id="myNav" class="overlay">
