--- a/gori/templates/architect_detail.html
+++ b/gori/templates/architect_detail.html
@@ -2,16 +2,37 @@
 {% load static %}
 {% block content %}
 {% load transl_extras %}
+<style>
+	.menuitem4{
+		text-decoration: underline !important;
+	}
 
+</style>
 <div class="post_detail_desktop">
 <div class="post_first_block">
-
-<a class="post_go_back" href="{% url 'architect' lang=lang %}">{% t 'back' %}</a>
+<a class="post_go_back" href="{% url 'history' lang=lang %}">{% t 'back' %}</a>
 <span class="post_title">{{history}}</span>
+
+<span onclick="copy()">
 <div class="post_social_divs"><img src="{% static '/icons/Iconlink.png' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
-<div class="post_social_divs"><img src="{% static '/icons/Vectorfb.png' %}" style="width: 22px; height: 22px; margin-left: 13.5px; margin-top: 13px; float: left;"></div>
+</span>
+
+<a href="https://www.facebook.com/dialog/share?app_id=87741124305&href={{ request.build_absolute_uri }}
+"><div class="post_social_divs"><img src="{% static '/icons/Vectorfb.png' %}" style="width: 22px; height: 22px; margin-left: 13.5px; margin-top: 13px; float: left;"></div></a>
+
 <div class="post_social_divs"><img src="{% static '/icons/vectortwshare.png' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
+
 <div class="post_line"></div>
+<div class="post_second_block">
+
+	{% if history.post_videos is not None %}
+	<iframe width="100%" height="495px" src="{{history.post_videos}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+	{% else %}
+	<img src="{% static history.post_img %}" class="post_img">
+	{% endif %}
+	<span class="post_author">{% t 'author' %}: {{history.post_author}}</span>
+</div>
 <span class="post_text">{{history.post_text}}</span>
 
 	<div class="post_tell_us_more">
@@ -35,15 +56,7 @@
 		</a>{% endif %}
 	</div>
 </div>
-<div class="post_second_block">
-	{% if history.post_videos is not None %}
-	<iframe width="100%" height="315" src="{{history.post_videos}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-	{% else %}
-	<img src="{% static history.post_img %}" class="post_img">
-	{% endif %}
-	<span class="post_author">{% t 'author' %}: {{history.post_author}}</span>
-</div>
 </div>
 <center>
 <div class="post_detail_mobile">
