--- a/static/css/IIblock.css
+++ b/static/css/IIblock.css
@@ -130,7 +130,7 @@ border: 1px solid #CCCCB7;
 
 .historychildtextinfo{
 position: inline-block;
-text-align: justify;
+text-align: left;
 display: inline-block;
 padding-top: 12px;
 
@@ -371,7 +371,7 @@ font-family: 'FiraGO';
 font-style: normal;
 font-weight: 600;
 font-size: 20px;
-line-height: 34px;
+line-height: 25px;
 
 /* or 170% */
 
@@ -452,7 +452,7 @@ font-family: 'FiraGO';
 font-style: normal;
 font-weight: 600;
 font-size: 20px;
-line-height: 34px;
+line-height: 25px;
 
 /* or 170% */
 
@@ -473,7 +473,7 @@ font-family: 'FiraGO';
 font-style: normal;
 font-weight: 600;
 font-size: 20px;
-line-height: 34px;
+line-height: 25px;
 
 /* or 170% */
 
@@ -493,7 +493,7 @@ font-family: 'FiraGO';
 font-style: normal;
 font-weight: 600;
 font-size: 20px;
-line-height: 34px;
+line-height: 25px;
 
 /* or 170% */
 
