--- a/static/css/detail_post.css
+++ b/static/css/detail_post.css
@@ -110,7 +110,8 @@ background: #FEFEF8;
 }
 .post_text{
 	display: block;
-	width: 682px;
+	width: 100%;
+	text-align: justify;
 	font-weight: 400;
 	font-style: normal;
 	line-height: 32px;
@@ -119,7 +120,7 @@ background: #FEFEF8;
 	font-size:  20px;
 }
 .post_line{
-	width: 682px;
+	width: 100%;
 	height: 0px;
 	display: block;
 	margin-top: 36px;
@@ -251,17 +252,17 @@ border-radius: 10px;
 }
 
 .post_first_block{
-	width: 682px;
+	width: 65%;
 	display: inline-block;
-	margin-left: 7%;
+	margin-left: 17%;
 }
 
 .post_second_block{
-	display: inline-block;
-	float: right;
-	width: 30%;
+	display: block;
+	float: left;
+	width: 100%;
 	margin-right: 8%;
-	margin-top: 306px;
+	margin-top: 36px;
 }
 
 .post_img{
@@ -270,10 +271,11 @@ border-radius: 10px;
 }
 
 .post_author{
-	margin-top: 24px;
+	margin-top: 15px;
 	display: block;
 	font-style: normal;
 	font-family: 'FiraGO';
+	margin-bottom: 40px;
 	line-height: 19px;
 	font-weight: 400;
 	color: #96967C;
