--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -4,6 +4,10 @@
 {% load transl_extras %}
 
 <style>.navbar{background-color: #F1F1E6 !important;}
+#map{
+	height: 450px;
+	width: 100%;
+}
 </style>
 
 <div class="iblockDiv">
@@ -32,9 +36,15 @@
 			{% endif %}
 	</div>
 
-<iframe src="https://snazzymaps.com/embed/429468" width="100%" height="450px" style="margin-top:40px;"></iframe>
-<script
-    src="https://maps.googleapis.com/maps/api/js?v=3.50&key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&callback" async defer>
+        <div id="map"></div>
+        <script>
+            const pins = {{ pins|safe }};
+        </script>
+        <div id="post" class="pinpost">
+
+        </div>
+        <script
+    src="https://maps.googleapis.com/maps/api/js?v=3.50&key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&callback=initMap" async defer>
 </script>
 <center>
 <span class="under_map_text_first"><img src="{% static '/icons/Icongps.png' %}" style="display:inline-block; position: absolute;"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{% t 'undermaptextf' %}</span>
@@ -52,7 +62,8 @@
 		{% endif %} <br><br><br><br>
 		<span class="identmapinfomobile" style="text-align:left">{% t "identity_map_text" %}</span>
 	</div></center>
-	<iframe src="https://snazzymaps.com/embed/429468" width="100%" height="450px" style="margin-top:40px;"></iframe>
+	<iframe src="https://snazzymaps.com/embed/429468" width="100%" height="450px" style="margin-top:40px;" id="map"></iframe>
+	
 <script
     src="https://maps.googleapis.com/maps/api/js?v=3.50&key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&callback" async defer>
 </script>
