--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="{% static '/css/textus.css' %}">
         <link rel="stylesheet" href="{% static '/css/humans.css' %}">
         <link rel="stylesheet" href="{% static '/css/videos.css' %}">
+        <link rel="stylesheet" href="{% static '/css/map.css' %}">
+        <script src="{% static '/js/map.js' %}" async></script>
     </head>
 
     <body>
